# Data-Structures-and-Algorithms-in-Python

./: README.md  pyproject.toml
Chapter 1 - Python Primer/Exercises/: 1.11.py  1.14.py  1.15.py  1.16.py  1.17.py  1.18.py  1.19.py  1.20.py  1.21.py  1.22.py  1.23.py  1.24.py  1.25.py  1.26.py  1.27.py  1.28.py  1.29.py  1.3.py  1.30.py  1.31.py  1.32.py  1.34.py  1.35.py  1.36.py  1.4.py  1.5.py  1.7.py  1.9.py  R-1.1.py  R-1.10.py  R-1.12.py  R-1.13.py  R-1.2.py  R-1.6.py  R-1.8.py
Chapter 2 - Object-Oriented Programming/Notes/: 2.1 - Goals, Principles and Patterns.md
