[tool.poetry]
name = "data-structures-and-algorithms-in-python"
version = "0.1.0"
description = ""
authors = ["Harikeshav R <r.harikeshav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
